fix align issues on the footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -447,18 +447,19 @@ div.similar_listings > div.profiles_list > div.profile > div.listings_statistics
     display: flex;
     width: auto;
     max-width: 100%;
+    border-radius: 0 0 5px 25px;
 }
 
 div.similar_listings > div.profiles_list > div.profile > div.listings_statistics > .car{
-    width: 10%;
+    width: 15%;
 }
 
 div.similar_listings > div.profiles_list > div.profile > div.listings_statistics > .bath{
-    width: 10%;
+    width: 15%;
 }
 
 div.similar_listings > div.profiles_list > div.profile > div.listings_statistics > .hashtag{
-    width: 10%
+    width: 15%
 }
 
 div.similar_listings > div.profiles_list > div.profile > div.listings_statistics > div {
